Edit StudentDB Form Kivy

--- a/studentdb.kv
+++ b/studentdb.kv
@@ -33,7 +33,7 @@ StudentDB:
         Button:
             text: "Submit"
             size_hint_x: 15
-            on_press: root.submit_students()
+            on_press: root.submit_student()
 
         Button:
             text: "Delete"
